--- a/index.css
+++ b/index.css
@@ -13,12 +13,16 @@ button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    margin: 10px 0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 button:hover {
     background-color: rgba(76, 226, 118, 0.526);
 }
 .results {
-    margin-top:30px;
+    margin-top:30px 0;
+    padding: 5px 0;
+    
     
 
 }
